Fixed minor writing issue

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
-    "serverless-http": "^2.5.0",
+    "serverless-http": "^2.5.0"
   },
   "devDependencies": {},
   "scripts": {
