--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "netlify-lambda": "^1.6.3",
-    "serverless-http": "^2.5.0"
+    "serverless-http": "^2.5.0",
+    "node-sass-middleware": "0.11.0",
+    "morgan": "~1.9.1",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "cookie-parser": "^1.4.5",
+    "popper.js": "^1.16.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ejs": "^3.1.3"
+  },
   "scripts": {
     "start": "./node_modules/.bin/netlify-lambda serve src",
     "build": "./node_modules/.bin/netlify-lambda build src",
