--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "jquery": "^3.5.1",
+    "jsdom": "^16.3.0",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
-    "serverless-http": "^1.9.1",
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "serverless-http": "^1.9.1"
   },
   "engines": {
     "node": "12.x"
+  },
+  "devDependencies": {
+    "canvas": "^2.6.1"
   }
 }
